--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+config.json
+*_venv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -142,3 +144,4 @@ cython_debug/
 
 # SQLITE database
 *.db
+config.json
