--- a/maury_bot/database/emotes.yaml
+++ b/maury_bot/database/emotes.yaml
@@ -1,72 +1,133 @@
 emotes:
+  - name: thumbs_up
+    emojis:
+      - thumbs_up
+
+  - name: thumbs_down
+    emojis:
+      - thumbs_down
+
+  - name: missing
+    emojis:
+      - lack
+
+  - name: get_money
+    emojis:
+      - bread
+
+  - name: inside_joke
+    emojis:
+      - its_for_you
+
+  - name: loopy
+    emojis:
+      - herp_derp
+      - blep
+  
+  - name: exhaustion
+    emojis:
+      - dead
+      
+  - name: confusion
+    emojis:
+      - dafuq
+      - herp_derp
+
+  - name: epic
+    emojis:
+      - gigachris
+    
+  - name: awesome
+    emojis:
+      - flawless_victory
+
   - name: condemnation
     emojis:
       - judgement
       - flip_off
       - banned
     prompt: "Response: a condemnation of the message from {author}.\n"
+
+  - name: horrible
+    emojis:
+      - hyper_anti_sheee
+
   - name: inappropriate
     emojis:
       - inappropriate
     prompt: "Response: the message from {author} is inappropriate.\n"
+
   - name: congratulations
     emojis:
-      - flawless_victory
       - ole
       - pog
     prompt: "Response: congratulations to the message from {author}.\n"
+
   - name: excited
     emojis:
       - sheeee
     prompt: "Response: excited by the message from {author}.\n"
+
   - name: condolences
     emojis:
       - antisheeee
       - low_energy
     prompt: "Response: send condolences to {author}.\n"
+
   - name: good_answer
     emojis:
       - good_answer
+      - wise
     prompt: "Response: you like what {author} said, and that it was particularly clever.\n"
-  - name: caught
+
+  - name: caught_in_a_lie
     emojis:
       - caught
       - cap
     prompt: "Response: {author} has been caught in a lie.\n"
-  - name: drool
+
+  - name: delicious
     emojis:
       - drool
     prompt: "Response: you are drooling over {author}'s message.\n"
+
   - name: suspicious
     emojis:
       - sus
       - terio
     prompt: "Response: {author} is acting suspicious.\n"
+
   - name: shock
     emojis:
       - shock
     prompt: "Response: you are shocked by {author}'s message.\n"
-  - name: lul
+
+  - name: laughter
     emojis:
       - lul
     prompt: "Response: you are laughing {author}'s message.\n"
+
   - name: joy
     emojis:
       - joy
     prompt: "Response: {author}'s message makes you happy.\n"
-  - name: facepalm
+
+  - name: shame
     emojis:
       - facepalm
     prompt: "Response: you are facepalming at {author}'s message.\n"
-  - name: disappointing
+
+  - name: disappointment
     emojis:
       - disappointing
     prompt: "Response: you are disappointed about {author}'s message.\n"
-  - name: stand_by_it
+
+  - name: confidence
     emojis:
       - stand_by_it
     prompt: "Response: despite facing criticisms, you support {author} with their good idea.\n"
-  - name: he_admit_it
+
+  - name: honesty
     emojis:
       - he_admit_it
     prompt: "Response: An epic turn of events, {author} has to marry their mother-in-law!\n"
